walkutils: git sync